@@ -97,16 +97,17 @@ sertoser(GEN x, long prec)
 }
 
 /* R(1/x) = x^v * n/d, val(n) = val(d) = 0 */
-void
-rfracrecip(GEN *pn, GEN *pd, long *pv)
+long
+rfracrecip(GEN *pn, GEN *pd)
 {
-  *pv = degpol(*pd);
+  long v = degpol(*pd);
   if (typ(*pn) == t_POL && varn(*pn) == varn(*pd))
   {
-    *pv -= degpol(*pn);
+    v -= degpol(*pn);
     (void)RgX_valrem(*pn, pn); *pn = RgX_recip(*pn);
   }
   (void)RgX_valrem(*pd, pd); *pd = RgX_recip(*pd);
+  return v;
 }
 
 /* R(1/x) + O(x^N) */
@@ -114,8 +115,7 @@ GEN
 rfracrecip_to_ser_absolute(GEN R, long N)
 {
   GEN n = gel(R,1), d = gel(R,2);
-  long v;
-  rfracrecip(&n, &d, &v); /* R(1/x) = x^v * n/d, val(n) = val(d) = 0 */
+  long v = rfracrecip(&n, &d); /* R(1/x) = x^v * n/d, val(n) = val(d) = 0 */
   if (N <= v) return zeroser(varn(d), N);
   R = gdiv(n, RgX_to_ser(d, N-v+2));
   setvalp(R, v); return R;
