@@ -3584,7 +3584,7 @@ GEN     gtoser(GEN x, long v, long d);
 GEN     gtoser_prec(GEN x, long v, long d);
 GEN     rfrac_to_ser(GEN x, long l);
 GEN     rfracrecip_to_ser_absolute(GEN R, long l);
-void    rfracrecip(GEN *pn, GEN *pd, long *pv);
+long    rfracrecip(GEN *pn, GEN *pd);
 GEN     scalarser(GEN x, long v, long prec);
 GEN     sertoser(GEN x, long prec);
 GEN     toser_i(GEN x);
